--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">News For Clever</string>
     <string name="api_key">dbd32da4e1464fc09c6b8a47aa77e96d</string>
+
+    <string name="common_err_msg">Something went wrong…</string>
+    <string name="empty_list_text">There are no news</string>
+    <string name="main_snack_loading">Loading. Please wait…</string>
 </resources>
